car/cdr implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,7 @@
-add_executable (slist slist_context.cpp slist_eval.cpp slist_parser.cpp main.cpp)
+add_executable (slist 
+				slist_types.cpp
+				slist_context.cpp
+				slist_eval.cpp
+				slist_parser.cpp
+				main.cpp)
 target_compile_features(slist PRIVATE cxx_range_for)
