--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required(VERSION 3.3)
-add_executable (slist 
-				slist_types.cpp
-				slist_context.cpp
-				slist_eval.cpp
-				slist_parser.cpp
-				slist_native.cpp
-				slist_log.cpp
-				main.cpp)
-target_compile_features(slist PRIVATE cxx_range_for)
+
+project(slist)
+
+set(CMAKE_CXX_FLAGS                "-Wall -std=c++11")
+set(CMAKE_CXX_FLAGS_DEBUG          "-O0 -g")
+set(CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
+set(CMAKE_CXX_FLAGS_RELEASE        "-O4 -DNDEBUG")
+set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
+
+add_subdirectory(lib)
+add_subdirectory(repl)
